tests/tooling/fixtures/native/execution/negative/for_missing_body_statement.objc3
module ForMissingBodyStatement;

fn main() -> i32 {
  for (let i = 0; i < 1; i = i + 1)
}
